# SPOTMICRO__PFE__2025__SORBONNE

./: .gitignore  .gitmodules  README.md  installation_guide.md  make_py_executable.sh  requirements.txt  spot_micro_sign  tore WIP from stash and continue on tricks  步态优化修改记录.md
docs/: mpu6050_integration.md  servo_calibration_spreadsheet.ods
lcd_monitor/: CMakeLists.txt  package.xml
lcd_monitor/scripts/: sm_lcd_node.py
mpu6050_imu/: CMakeLists.txt  README.md  package.xml
mpu6050_imu/launch/: mpu6050.launch
mpu6050_imu/scripts/: mpu6050_node.py
ros-i2cpwmboard_new/launch/: i2cpwm_node.launch
ros-i2cpwmboard_new/src/: i2cpwm_controller.cpp
servo_move_keyboard/: CMakeLists.txt  package.xml
servo_move_keyboard/scripts/: servoConfigTest.py  servoMoveKeyboard.py
servo_move_keyboard/test_servo/: test_left_back_leg.py  test_left_front_leg.py  test_right_back_leg.py  test_right_front_leg.py
spot_micro_autonomous_slam/: CMakeLists.txt  COMPLETION_CHECKLIST.md  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  PATH_PLANNING_GUIDE.md  QUICK_START.md  README.md  REFERENCE_CARD.md  START_HERE.md  USAGE_GUIDE.md  package.xml
spot_micro_autonomous_slam/config/: base_local_planner_params.yaml  costmap_common_params.yaml  exploration_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
spot_micro_autonomous_slam/launch/: autonomous_slam.launch  exploration_with_path_planning.launch  move_base.launch  simple_exploration.launch
spot_micro_autonomous_slam/scripts/: autonomous_explorer.py  diagnose_navigation.py  frontier_exploration_client.py  map_saver.py  odom_publisher.py  path_planner.py  path_planner_control.py  simple_explorer.py
spot_micro_gazebo/: CMakeLists.txt  package.xml
spot_micro_gazebo/config/: joint_control.yaml
spot_micro_gazebo/launch/: spot_micro_gazebo.launch
spot_micro_gazebo/scripts/: servo_to_gazebo_bridge.py
spot_micro_gazebo/urdf/: spot_micro_gazebo.xacro  spot_micro_gazebo.xacro.backup
spot_micro_joy/: CMakeLists.txt  package.xml
spot_micro_joy/scripts/: spotMicroJoystickMove.py
spot_micro_keyboard_command/: CMakeLists.txt  package.xml
spot_micro_keyboard_command/launch/: keyboard_command.launch
spot_micro_keyboard_command/scripts/: spotMicroKeyboardMove.py
spot_micro_keyboard_command/srv/: MotionCmd.srv
spot_micro_launch/: CMakeLists.txt  package.xml
spot_micro_launch/launch/: spot_micro_with_imu.launch
spot_micro_motion_cmd/: CMakeLists.txt  package.xml
spot_micro_motion_cmd/config/: spot_micro_motion_cmd.yaml
spot_micro_motion_cmd/src/: spot_micro_motion_cmd.cpp  spot_micro_motion_cmd_node.cpp
spot_micro_motion_cmd/src/smfsm/: spot_micro_idle.cpp  spot_micro_state.h  spot_micro_walk.cpp
spot_micro_plot/: CMakeLists.txt  package.xml  setup.py
spot_micro_plot/scripts/: spotMicroPlot.py
spot_micro_plot/srv/: PoseCmd.srv
spot_micro_pybullet/: CMakeLists.txt  package.xml
spot_micro_pybullet/launch/: full_simulation.launch  keyboard_control_sim.launch  pybullet_simulation.launch  pybullet_simulation_with_slam.launch  sim_and_viz.launch
spot_micro_pybullet/scripts/: README.md  env_tester.py  simple_gait_generator.py  spot_diagnostic.py  spot_micro_kinematics.py  spot_micro_kinematics_fixed.py  spot_micro_pybullet_sim.py  文件结构说明 structure des code.md  机器人差异说明.md  诊断问题.md  问题修复说明.md  项目差异和问题分析.md
spot_micro_pybullet/urdf/: spot_micro_pybullet.urdf.xacro  spot_micro_pybullet_gen_ros.urdf
spot_micro_rl/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  package.xml  requirements.txt  setup.py  visualize_training_losses.ipynb
spot_micro_rl/config/: rl_params.yaml
spot_micro_rl/launch/: rl_deploy.launch  rl_train.launch
spot_micro_rl/models/: README.md  read_pkl.py
spot_micro_rl/results/: README.md
spot_micro_rl/scripts/: gmbc_data.py  spot_rl_deploy.py  spot_rl_eval.py  spot_rl_eval_ars.py  spot_rl_test.py  spot_rl_train_ars.py  spot_rl_train_sac.py  spot_rl_train_sac_parallel.py  spot_rl_train_td3.py  spot_rl_train_td3_parallel.py
spot_micro_rl/src/spot_micro_rl/: __init__.py  ars.py  bezier_gait.py  env_randomizer_base.py  heightfield.py  leg_kinematics.py  lie_algebra.py  motor.py  networks.py  parallel_env.py  replay_buffer.py  sac.py  spot_env.py  spot_env_randomizer.py  spot_kinematics.py  td3.py
spot_micro_rl/tests/: test_phase1.py  test_phase2.py  test_phase3.py
spot_micro_rviz/: CMakeLists.txt  package.xml
spot_micro_rviz/launch/: show_and_move_model_via_gui.launch  show_model.launch  slam.launch
spot_micro_rviz/rviz/: spot_micro.rviz  spot_micro_slam.rviz
spot_micro_sign/: V2sign_pipe.py  V2sign_ros_call.py  V3sign_pipe.py  V3sign_ros_call.py  V4sign_detector.py  V4sign_pipe.py  V4sign_ros_call.py  V5_camera_sign_detector.py  V5sign_pipe.py  robot_responses.py  robot_tts.py  sign_detector.py  sign_observer.py  sign_pipe.py  sign_ros_call.py
spot_micro_voc/: voc_detector.py  voc_pipe.py
