<?xml version="1.0"?>
<package format="2">
  <name>mpu6050_imu</name>
  <version>0.1.0</version>
  <description>ROS driver for MPU6050 IMU sensor on I2C bus</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
