<?xml version="1.0"?>
<package format="2">
  <name>spot_micro_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for SpotMicro</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>i2cpwm_board</depend>
  <depend>rospy</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
