<?xml version="1.0"?>
<package format="2">
  <name>spot_micro_rl</name>
  <version>2.0.0</version>
  <description>Reinforcement Learning package for Spot Micro quadruped robot - Complete training suite with ARS, SAC, TD3</description>
  
  <maintainer email="pfe@sorbonne.fr">PFE Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>spot_micro_pybullet</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  
</package>
